--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tanstack/react-query": "^5.45.1",
 		"@tanstack/react-query-devtools": "^5.45.1",
 		"@tanstack/react-table": "^8.17.3",
+		"@uidotdev/usehooks": "^2.4.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^0.2.0",
